--- a/css/style.css
+++ b/css/style.css
@@ -753,7 +753,7 @@ h6 {
 }
 
 .project-display .project-bkg-img {
-  background: url('../images/homepage/seamhub-bkg-mobile.png');
+  background: url('../images/homepage/seamhub-bkg-mobile.png') #183038;
   background-position:bottom;
   background-repeat: no-repeat;
   background-size: 100%;
@@ -983,7 +983,7 @@ h6 {
 }
 
 .hero-pic {
-  background: url("../images/about/hero-pic.jpg") #00A699;
+  background: url("../images/about/hero-pic.jpg") #EAE7E9;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
