--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,7 @@ h6 {
     top: 0;
     width: 100%;
     z-index: 1;
+
 }
 
 .overlay-content {
@@ -842,6 +843,9 @@ h6 {
     display: block;
     height: auto;
     width: 100%;
+    transition: .5s ease;
+    backface-visibility: hidden;
+    opacity: 1;
   }
 
   .project-display {
@@ -852,10 +856,10 @@ h6 {
     height: auto;
     justify-content: center;
     left: 0;
-    opacity: 0;
     position: absolute;
     top: 0;
-    transition: none 0.15s ease-in-out;
+    opacity: 0;
+    transition: .5s ease;
     right: 0;
     width: 100%;
   }
