fixed images and updated nav bar

--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,7 @@ p {
 h1 {
   font-size: 4.2rem;
   letter-spacing: -1px;
+  font-weight: 900;
 }
 
 h2 {
@@ -275,6 +276,7 @@ h6 {
   .label, .label-text {
     font-size: 2.0rem;
     line-height: 3rem;
+    margin: 5rem 0;
   }
 
   .small-text {
@@ -288,7 +290,7 @@ h6 {
 
   .heading {
     letter-spacing: 1rem;
-    margin: 4rem;
+    margin: 8rem;
   }
 
   .sub-title {
@@ -662,6 +664,10 @@ h6 {
 
 .hero {
   margin-top: 10rem;
+}
+
+h1 .animated.fadeInDown.slower {
+  font-weight: 1200;
 }
 
 .hero > h2 {
@@ -1177,7 +1183,7 @@ h6 {
 @media screen and (min-width: 1024px) {
   #section-nav {
     align-items: center;
-    background-color: #F6F5F6;
+    background-color: rgba(234, 231, 233, 90%);
     display: flex;
     justify-content: space-between;
     margin-bottom: 5rem;
@@ -1365,6 +1371,7 @@ h6 {
 
 .project-dir-box {
   background-color: #D3DEDE;
+  margin-top: 3rem;
   padding: 2.5rem 2.5rem;
 }
 
@@ -1380,7 +1387,9 @@ h6 {
 @media screen and (min-width: 768px) {
   .project-dir-box {
     padding: 2.5rem 8rem;
-    margin-top: 3rem;
+    margin-top: 4.5rem;
+    margin-bottom: 4.5rem;
+
   }
 }
 
@@ -1397,7 +1406,7 @@ h6 {
 /* User Persona */
 
 .persona {
-  margin: 3rem 0;
+  margin: 4rem 0;
 }
 
 .persona h6 {
