--- a/css/style.css
+++ b/css/style.css
@@ -159,12 +159,10 @@ p {
 h1 {
   font-size: 4.2rem;
   letter-spacing: -1px;
-  font-weight: 900;
 }
 
 h2 {
   font-size: 2.4rem;
-  font-weight: 600;
   line-height: 1.3;
 }
 
@@ -214,19 +212,20 @@ h6 {
   margin-bottom: 1.5rem;
 }
 
-.label {
+.label, .label-text {
   font-family: 'Nunito', sans-serif;
   font-size: 1.8rem;
-  font-weight: 600;
   line-height: 2.7rem;
+  margin: 1.5rem 0;
+}
+
+.label {
+  font-weight: 600;
+
 }
 
 .label-text {
-  font-family: 'lato', sans-serif;
-  font-size: 1.8rem;
   font-weight: 400;
-  line-height: 3.0rem;
-  letter-spacing: 0.1rem;
 }
 
 .small-text {
@@ -275,8 +274,8 @@ h6 {
 
   .label, .label-text {
     font-size: 2.0rem;
-    line-height: 3rem;
-    margin: 5rem 0;
+    line-height: 2.8rem;
+    margin: 1rem 0;
   }
 
   .small-text {
@@ -454,7 +453,15 @@ h6 {
 
 #nav-white a {
   color: #FFF;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
 }
+
+#nav-white a:hover {
+  color: #BC519E;
+}
+
+
 
 /* Nav Menu for Mobile Screen */
 
@@ -586,7 +593,7 @@ h6 {
 
 .footer-box p {
   font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
+  font-weight: 300;
   padding: 1rem 2.5rem;
 }
 
@@ -777,12 +784,11 @@ h1 .animated.fadeInDown.slower {
   height: 43rem;
   margin: 0 auto;
   position: relative;
-  top: 9rem;
+  top: 11rem;
 }
 
 .project-info > h2 {
   font-size: 2.6rem;
-  font-weight: 700;
   letter-spacing: 2.6px;
 }
 
@@ -792,7 +798,7 @@ h1 .animated.fadeInDown.slower {
 #btn-case-study {
   border: 1.5px solid #FFF;
   color: #FFF;
-  margin: 2rem 0 3rem 0;
+  margin: 1.5rem 0;
   padding: 1.2rem 1.8rem;
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s;
@@ -859,7 +865,7 @@ h1 .animated.fadeInDown.slower {
     bottom: 0;
     display: flex;
     flex-direction: column;
-    height: auto;
+    height: inherit;
     justify-content: center;
     left: 0;
     position: absolute;
@@ -876,6 +882,10 @@ h1 .animated.fadeInDown.slower {
 
   .project-section-desktop:hover .project-display {
     opacity: 1;
+  }
+
+  #btn-case-study {
+    margin: 3rem 0;
   }
 }
 
@@ -1176,6 +1186,10 @@ h1 .animated.fadeInDown.slower {
     margin: 0 auto;
     width: 90%;
   }
+
+  #project-label {
+    margin: 4rem 0 3rem 0;
+  }
 }
 
 /* ### Section Menu ### */
@@ -1195,8 +1209,8 @@ h1 .animated.fadeInDown.slower {
   #section-nav a {
     color: #6F676D;
     font-family: 'Montserrat', sans-serif;
-    font-size: 2rem;
-    font-weight: 450;
+    font-size: 1.8rem;
+    font-weight: 420;
     letter-spacing: -1%;
   }
 
@@ -1415,7 +1429,6 @@ h1 .animated.fadeInDown.slower {
 .persona h6 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.0rem;
-  font-weight: 600;
   margin: 3rem 0 2rem 0;
 }
 
@@ -1493,7 +1506,7 @@ blockquote:before {
   }
 
   .persona h6 {
-    font-size: 2.6rem;
+    font-size: 2.2rem;
   }
 
   .persona-info {
@@ -1522,6 +1535,7 @@ blockquote:before {
 #pinterest {
   grid-area: two;
   justify-self: center;
+  padding-top: 6px;
 }
 
 #icloud {
@@ -1540,12 +1554,24 @@ blockquote:before {
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-areas:
     "one two three";
-    margin: 4.5rem 0 3.5rem 0;
+    margin: 5rem 0 4rem 0;
   }
 
   .comp-logo img {
-    max-width: 23rem;
-    height: auto;
+    max-width: 22rem;
+  }
+
+  #dropbox {
+    padding-top: 14px;
+  }
+
+  #pinterest {
+    padding-top: 8px;
+
+  }
+
+  #icloud {
+    padding-bottom: 2px;
   }
 }
 
@@ -1553,7 +1579,7 @@ blockquote:before {
 
 /* User Flow */
 
-.userflow-bkg .userflow-img {
+.userflow-img {
   background: url('../images/projects/seamhub/user-flow-bkg.png');
   background-position: top;
   background-repeat: no-repeat;
@@ -1600,14 +1626,24 @@ blockquote:before {
   margin-top: 3rem;
 }
 
+.lo-fi-link {
+  padding-left: 2.5rem;
+}
+
 #add-margin {
   margin-bottom: 3rem;
+}
+
+@media screen and (min-width: 768px) {
+  .lo-fi-link {
+    padding-left: 8rem;
+  }
 }
 
 @media screen and (min-width: 1024px) {
 
   .wireframe-banner {
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
   }
 
   .lo-fi-bkg {
@@ -1623,9 +1659,9 @@ blockquote:before {
   }
 
   .lo-fi-link {
-    justify-self: end;
+    justify-self: flex-end;
     position: relative;
-    padding: 0 15rem 1.5rem 0;
+    padding: 0 20rem 1.5rem 0;
   }
 }
 
